--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 			    display: none;
 			    margin: 1em;
 		    }
+            /* Always set the map height explicitly to define the size of the div
+             * element that contains the map. */
+            #map {
+                height: 100%;
+            }
+            html, body {
+                height: 100%;
+                margin: 0;
+                padding: 0;
+            }
 	    </style>
         
     </head>
@@ -44,7 +54,7 @@
                         <a class="nav-link" href="#screen2">Results</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#screen3">Map</a>
+                        <a class="nav-link" href="#map">Map</a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +66,7 @@
         <div class="content" id="screen2">
             This is screen 2
         </div>
-        <div class="content" id="screen3">
+        <div class="content" id="map">
             This is screen 3
         </div>
              
