gets userinput from box

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="#home">Search <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#screen2">Results</a>
+                        <a class="nav-link" href="#display">Results</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#map">Map</a>
@@ -63,7 +63,7 @@
         <!-- the content divs -->
         <div class="content" id="home">
         </div>
-        <div class="content" id="screen2">
+        <div class="content" id="display">
             This is screen 2
         </div>
         <div class="content" id="map">
