--- a/page_content/_home.html
+++ b/page_content/_home.html
@@ -69,6 +69,8 @@
                 // Past movies
                 $.get(endpoint + "?" + category + "=" + boxInput,
                       function(response){
+                          $(".content").hide();
+                          $("#display").show();
 //                           $.each(response, function(i,v){
 //                               $("body").append(v.day + "<br>");
 //                           });
