--- a/page_content/_display.html
+++ b/page_content/_display.html
@@ -1,9 +1,16 @@
 <table class="table">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Day</th>
+      <th scope="col">Date</th>
+      <th scope="col">Park</th>
+      <th scope="col">Park Phone</th>
+      <th scope="col">Title</th>
+      <th scope="col">CC</th>
+      <th scope="col">Rating</th>
+      <th scope="col">Underwriter</th>
+      <th scope="col">Park Address</th>
+      <th scope="col">Location</th>
     </tr>
   </thead>
   <tbody>
@@ -11,16 +18,25 @@
       <td>Mark</td>
       <td>Otto</td>
       <td>@mdo</td>
+        <td>@mdo</td>
+        <td>@mdo</td>
+        <td>@mdo</td>
     </tr>
     <tr>
       <td>Jacob</td>
       <td>Thornton</td>
       <td>@fat</td>
+        <td>@mdo</td>
+        <td>@mdo</td>
+        <td>@mdo</td>
     </tr>
     <tr>
       <td>Larry</td>
       <td>the Bird</td>
       <td>@twitter</td>
+        <td>@mdo</td>
+        <td>@mdo</td>
+        <td>@mdo</td>
     </tr>
   </tbody>
 </table>
