--- a/page_content/_display.html
+++ b/page_content/_display.html
@@ -2,7 +2,7 @@
   <thead class="thead-dark">
     <tr>
       <th scope="col">Day</th>
-      <th scope="col">Date</th>
+       <th scope="col">Date</th>
       <th scope="col">Park</th>
       <th scope="col">Park Phone</th>
       <th scope="col">Title</th>
@@ -10,33 +10,30 @@
       <th scope="col">Rating</th>
       <th scope="col">Underwriter</th>
       <th scope="col">Park Address</th>
-      <th scope="col">Location</th>
+      <th scope="col">Location</th> 
     </tr>
   </thead>
-  <tbody>
-    <tr>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-    </tr>
-    <tr>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-    </tr>
-    <tr>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-    </tr>
-  </tbody>
+  <tbody></tbody>
 </table>
+
+<script>
+    var endpoint = sessionStorage.getItem("endpoint");
+    $.getJSON(endpoint, function(data){
+        var items = [];
+        $.each(data, function(key, value){
+            items.push("<tr>");
+            items.push("<td id=''"+key+"''>"+value.day+"</td>");
+            items.push("<td id=''"+key+"''>"+value.date+"</td>");
+            items.push("<td id=''"+key+"''>"+value.park+"</td>");
+            items.push("<td id=''"+key+"''>"+value.park_phone+"</td>");
+            items.push("<td id=''"+key+"''>"+value.title+"</td>");
+            items.push("<td id=''"+key+"''>"+value.cc+"</td>");
+            items.push("<td id=''"+key+"''>"+value.rating+"</td>");
+            items.push("<td id=''"+key+"''>"+value.underwriter+"</td>");
+            items.push("<td id=''"+key+"''>"+value.park_address+"</td>");
+            items.push("<td id=''"+key+"''>"+value.location+"</td>");
+            items.push("</tr>");            
+        }); 
+        $("<tbody/>", {html: items.join("")}).appendTo("table");
+    });
+</script>
