--- a/page_content/_display.html
+++ b/page_content/_display.html
@@ -19,7 +19,9 @@
 <script>
     var endpoint = sessionStorage.getItem("endpoint");
     $.getJSON(endpoint, function(data){
+       
         var items = [];
+        
         $.each(data, function(key, value){
             items.push("<tr>");
             items.push("<td id=''"+key+"''>"+value.day+"</td>");
@@ -31,7 +33,7 @@
             items.push("<td id=''"+key+"''>"+value.rating+"</td>");
             items.push("<td id=''"+key+"''>"+value.underwriter+"</td>");
             items.push("<td id=''"+key+"''>"+value.park_address+"</td>");
-            items.push("<td id=''"+key+"''>"+value.location+"</td>");
+            items.push("<td id=''"+key+"''>"+value.location.latitude+", "+value.location.longitude+"</td>");
             items.push("</tr>");            
         }); 
         $("<tbody/>", {html: items.join("")}).appendTo("table");
