map updated to display markers

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <style>
             h1 { color: gold; font-family: verdana; font-size: 300%; text-align: center; padding: 25px;}
             h2 { color: gold; font-family: verdana; font-size: 200%; text-align: center; padding: 35px;}
+            p  { color: gold; font-family: verdana; font-size: 100%; text-align: center;}
             .home-container {
                 text-align: center;
             }
