--- a/page_content/_home.html
+++ b/page_content/_home.html
@@ -67,6 +67,7 @@
                           sessionStorage.setItem("endpoint",endPoint);
                           $(".content").hide();
                           $("#display").load("page_content/_display.html");
+                          $("#map").load("page_content/_map.html");
                           $("#display").show();
                 });     
 
@@ -80,6 +81,7 @@
                           sessionStorage.setItem("endpoint",endPoint);
                           $(".content").hide();
                           $("#display").load("page_content/_display.html");
+                          $("#map").load("page_content/_map.html");
                           $("#display").show();
                 });                
             }
