finished map section

--- a/page_content/_map.html
+++ b/page_content/_map.html
@@ -82,35 +82,27 @@
           center: center
         });
           
-       var contentString = '<div id="content">'+
-            '<div id="siteNotice">'+
-            '</div>'+
-            '<h1 id="firstHeading" class="firstHeading">Uluru</h1>'+
-            '<div id="bodyContent">'+
-            '<p><b>Uluru</b>, also referred to as <b>Ayers Rock</b>, is a large ' +
-            'sandstone rock formation in the southern part of the '+
-            'Northern Territory, central Australia. It lies 335&#160;km (208&#160;mi) '+
-            'south west of the nearest large town, Alice Springs; 450&#160;km '+
-            '(280&#160;mi) by road. Kata Tjuta and Uluru are the two major '+
-            'features of the Uluru - Kata Tjuta National Park. Uluru is '+
-            'sacred to the Pitjantjatjara and Yankunytjatjara, the '+
-            'Aboriginal people of the area. It has many springs, waterholes, '+
-            'rock caves and ancient paintings. Uluru is listed as a World '+
-            'Heritage Site.</p>'+
-            '<p>Attribution: Uluru, <a href="https://en.wikipedia.org/w/index.php?title=Uluru&oldid=297882194">'+
-            'https://en.wikipedia.org/w/index.php?title=Uluru</a> '+
-            '(last visited June 22, 2009).</p>'+
-            '</div>'+
-            '</div>';
-
-        var infowindow = new google.maps.InfoWindow({
-          content: contentString
-        });
           
-//        var markers = [];
        var endpoint = sessionStorage.getItem("endpoint");
        $.getJSON(endpoint, function(data){        
            $.each(data, function(key, value){
+               var contentString = '<div id="content">'+
+                '<div id="siteNotice">'+
+                '</div>'+
+                '<h1 id="firstHeading" class="firstHeading">'+value.title+'</h1>'+
+                '<div id="bodyContent">'+
+                '<p><b>Movie Rating: </b>' + value.rating + '</p>' +
+                '<p><b>Closed Captions: </b>' + value.cc + '</p>' +
+                '<p><b>Park: </b>' + value.park + '</p>' +
+                '<p><b>Address: </b>' + value.park_address + '</p>' +
+                '<p><b>Park Phone #: </b>' + value.park_phone + '</p>' +
+                '<p><b>Date :</b>' + value.date + '</p>' +
+                '</div>'+
+                '</div>';
+
+               var infowindow = new google.maps.InfoWindow({
+                   content: contentString
+               });
                var marker = new google.maps.Marker({
                    position: {lat: parseFloat(value.location.latitude), lng: parseFloat(value.location.longitude) },
                    map: map,
@@ -119,7 +111,6 @@
                marker.addListener('click', function() {
                   infowindow.open(map, marker);
                });
-               //markers.push(marker);
            });
        });
       }
