fixed loading issue

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
                     var target = $(this).attr("href");
                     $(target).show();
                 });
+                
+                $("#home").show()
             });
        </script> 
     </body>
