refixed path issues

--- a/page_content/_home.html
+++ b/page_content/_home.html
@@ -66,8 +66,8 @@
                       function(response){  
                           sessionStorage.setItem("endpoint",endPoint);
                           $(".content").hide();
-                          $("#display").load("../../page_content/_display.html");
-                          $("#map").load("../../page_content/_map.html");
+                          $("#display").load("/it202-project2/page_content/_display.html");
+                          $("#map").load("/it202-project2/page_content/_map.html");
                           $("#display").show();
                 });     
 
@@ -80,8 +80,8 @@
                       function(response){  
                           sessionStorage.setItem("endpoint",endPoint);
                           $(".content").hide();
-                          $("#display").load("../../page_content/_display.html");
-                          $("#map").load("../../page_content/_map.html");
+                          $("#display").load("/it202-project2/page_content/_display.html");
+                          $("#map").load("/it202-project2/page_content/_map.html");
                           $("#display").show();
                 });                
             }
