fixed path issue

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             var t1 = "#display";
             var t2 = "#map"
             var t3 = "#about"
-            $(t).load("/it202-project2/page_content/_home.html");
-            $(t1).load("/it202-project2/page_content/_display.html");
-            $(t2).load("/it202-project2/page_content/_map.html");
-            $(t3).load("/it202-project2/page_content/_about.html");
+            $(t).load("/../../../page_content/_home.html");
+            $(t1).load("../../../../page_content/_display.html");
+            $(t2).load("/../../../page_content/_map.html");
+            $(t3).load("/../../../page_content/_about.html");
 
         </script>
         
